<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="stringLogo">Udacity</string>
    <string name="stringAddress">2465 Latham St, Mountain View, CA 94043</string>
    <string name="stingPhone">650-555-5555</string>
    <string name="stringWeb">www.udacity.com</string>
    <string name="stringButton">Visit Website</string>
    <string name="stringUtp">Udacity is where lifelong learners come to learn the skills they need, to land the jobs they want, to build the lives they deserve.</string>
</resources>
