<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="udacity.com.helloandroid.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:src="@drawable/udacitylogo2" />

                <TextView
                    style="@style/Utp"
                    android:text="@string/stringUtp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:background="@drawable/shadow" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <TextView
                    style="@style/Adress"
                    android:paddingTop="20dp"
                    android:text="@string/stringLogo"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Adress"
                    android:paddingTop="10dp"
                    android:text="@string/stringAddress" />

                <TextView
                    style="@style/Adress"
                    android:autoLink="phone"
                    android:paddingTop="10dp"
                    android:text="@string/stingPhone"
                    android:textColorLink="@color/colorText" />

                <TextView
                    style="@style/Adress"
                    android:autoLink="web"
                    android:paddingTop="10dp"
                    android:text="@string/stringWeb"
                    android:textColorLink="@color/colorText" />

                <Button
                    style="@style/Button"
                    android:text="@string/stringButton" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            style="@style/ChatIcon"
            android:src="@drawable/ic_launcher"
            />
    </RelativeLayout>
</ScrollView>